@@ -481,7 +481,6 @@ AC_CHECK_LIB(regex, regcomp)
 dnl Checks for header files.
 AC_HEADER_DIRENT
 AC_HEADER_STDC
-AC_CHECK_FUNCS(strchr memcpy memset setmode _setmode)
 AC_CHECK_HEADERS(fcntl.h sys/window.h sys/termios.h unistd.h)
 
 dnl Checks for typedefs, structures, and compiler characteristics.
@@ -492,7 +491,8 @@ AC_TYPE_SIZE_T
 
 dnl Checks for library functions.
 AC_TYPE_SIGNAL
-AC_CHECK_FUNCS(getcwd regcmp regcomp strerror vsnprintf snprintf)
+AC_CHECK_FUNCS(strchr memcpy memset setmode _setmode)
+AC_CHECK_FUNCS(getcwd regcmp regcomp strerror vsnprintf snprintf lstat)
 AC_CHECK_FUNCS(fixkeypad)
 
 case "$host_os" in
